Refactor/code smellll (#412)
* fix: public 제한자 삭제.

* refactor: public 제한자 삭제2.

* refactor: 페브리즈